2005-01-08  Sebastien Bacher  <seb128@debian.org>

	* gnome-keyboard-properties.glade: fixed the mnemonics for some widgets
	(Closes: #163227).

2005-01-05  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-keyboard-properties.glade:  HIG corrections.  
	Use HIG capitalization for buttons: "Reset to defaults" -> 
	"Reset To Defaults".  Use HIG capitalization for window titles: 
	"Choose a keyboard model" -> "Choose A Keyboard Model" & 
	"Choose a layout" -> "Choose A Layout".  Add a missing ":" 
	from "Model" -> "Model:". Remove the dialog separators.  
	Use HIG widget padding to match the other capplet dialogs.
	
2005-01-02  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c
	gnome-keyboard-properties-xkb.h
	gnome-keyboard-properties-xkblt.c
	gnome-keyboard-properties-xkbmc.c
	gnome-keyboard-properties-xkbpv.c: a bit of the code cleanup

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-keyboard-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-12-31  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkblt.c
	gnome-keyboard-properties-xkbpv.c: preview reimplemented! Hurray!

2004-12-23  Sergey V. Udaltsov <svu@gnome.org>

	* use_cases.txt: just some memo (mostly for myself) regarding the 
	use cases for the tests.

2004-12-20  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkblt.c,
	gnome-keyboard-properties-xkbmc.c,
	gnome-keyboard-properties-xkbot.c,
	gnome-keyboard-properties.c,
	gnome-keyboard-properties.glade: massive layout change. Layout chooser 
	popup introduced

2004-12-13  Sergey V. Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkblt.c,