@@ -1,3 +1,8 @@
+2005-01-15  Sergey V. Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkbmc.c: fixing long-outstanding bug
+	with the current model selection.
+
 2005-01-08  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-keyboard-properties.glade: fixed the mnemonics for some widgets
